--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -247,7 +247,7 @@
         <div class="col-sm-8">
             <div class="col-sm-8">Bit depth of data returned by the camera</div>
             <div><span class="badge rounded-pill bg-info text-dark">Note</span> Switching your camera to JPEG/8-bit mode can affect this setting</div>
-            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Setting this incorrectly will cause problems</div>
+            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> This should only be used if your camera does not pre-scale the image data to the full 16-bit space</div>
         </div>
     </div>
 
