include panoramas in timelapse generator report

--- a/indi_allsky/flask/templates/timelapse.html
+++ b/indi_allsky/flask/templates/timelapse.html
@@ -38,7 +38,9 @@
             <div>K = Keogram exists</div>
             <div>S = Star trail exists</div>
             <div>ST = Star trail timelapse exists</div>
+            <div>P = Panorama timelapse exists</div>
             <div>! = Failed to generate</div>
+            <div>#/# = Images/Panorama images</div>
         </div>
     </div>
 
