--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2282,6 +2282,9 @@
 
     <hr>
 
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Changes to LATITUDE and LONGITUDE will not be immediately reflected in the status area.  A reload is necessary to update the camera metadata.</div>
+    <div>&nbsp;</div>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.LOCATION_NAME.label(class='col-form-label') }}
