remove text regarding GPS time

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1873,7 +1873,7 @@
             </div>
         </div>
         <div class="col-sm-8">
-            <div>Enable using GPS location and time services.  Requires GPS hardware and <a href="https://github.com/aaronwmorris/indi-allsky/wiki/GPSd-NTP-Time-Sync">GPSd installation</a></div>
+            <div>Enable using GPS location services.  Requires GPS hardware and <a href="https://github.com/aaronwmorris/indi-allsky/wiki/GPSd-NTP-Time-Sync">GPSd installation</a></div>
         </div>
     </div>
 
