remove warning from SCNR average neutral

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -641,8 +641,8 @@
             <div>SCNR algorithm to apply to reduce green bias in image</div>
             <div>
               <ul>
-                <li>Average Neutral - Good colors <span class="badge rounded-pill bg-warning text-dark">Warning</span> Can cause a magenta bias (especially during the day)</li>
-                <li>Maximum Neutral - Use this if you enable day time caputures</li>
+                <li>Average Neutral</li>
+                <li>Maximum Neutral</li>
               </ul>
             </div>
         </div>
