add setting to disable generating sub image thumbnails

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -534,6 +534,21 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.THUMBNAILS__IMAGES_AUTO.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.THUMBNAILS__IMAGES_AUTO(class='form-check-input') }}
+                <div id="THUMBNAILS__IMAGES_AUTO-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Automatically generate thumbnails for individual sub images.  Thumbnails are always generated for keograms and startrails.</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.DAYTIME_CONTRAST_ENHANCE.label }}
         </div>
         <div class="col-sm-2">
@@ -3985,6 +4000,7 @@ const checkbox_field_names = [
     'IMAGE_SAVE_FITS',
     'IMAGE_STACK_ALIGN',
     'IMAGE_STACK_SPLIT',
+    'THUMBNAILS__IMAGES_AUTO',
     'NIGHT_GRAYSCALE',
     'DAYTIME_GRAYSCALE',
     'TEXT_PROPERTIES__FONT_OUTLINE',
