fix chart.js in focus mode

--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -10,7 +10,7 @@ canvas {
     height: auto;
 };
 </style>
-<script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/chart.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/chart.umd.js') }}"></script>
 <script type="text/javascript">
 var json_data = {
     'image_b64'  : null,
