add {asset_label} variable for youtube title

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3199,7 +3199,7 @@
         </div>
         <div class="col-sm-6">
             <div>Available variables:</div>
-            <div><pre>day_date, timeofday</pre></div>
+            <div><pre>day_date, timeofday, asset_label</pre></div>
         </div>
     </div>
 
