add link to star trails wiki

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2028,8 +2028,8 @@
             <div id="KEOGRAM_ANGLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Min: -180, Max: 180 - Image rotate for Keogram data</div>
             <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Keogram-Rotation" class="text-decoration-none link-info" target="_blank">Keogram Wiki</a></div>
+            <div>Min: -180, Max: 180 - Image rotate for Keogram data</div>
         </div>
     </div>
 
@@ -2078,7 +2078,10 @@
             {{ form_config.STARTRAILS_SUN_ALT_THOLD(class='form-control bg-secondary') }}
             <div id="STARTRAILS_SUN_ALT_THOLD-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Sun altitude threshold</div>
+        <div class="col-sm-8">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Startrails" class="text-decoration-none link-info" target="_blank">Star Trails Wiki</a></div>
+            <div>Sun altitude threshold</div>
+        </div>
     </div>
 
     <div class="form-group row">
