--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2138,7 +2138,7 @@
             {{ form_config.STARTRAILS_MASK_THOLD(class='form-control bg-secondary') }}
             <div id="STARTRAILS_MASK_THOLD-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Mask threshold ADU</div>
+        <div class="col-sm-8"></div>
     </div>
 
     <div class="form-group row">
@@ -2149,7 +2149,7 @@
             {{ form_config.STARTRAILS_PIXEL_THOLD(class='form-control bg-secondary') }}
             <div id="STARTRAILS_PIXEL_THOLD-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Exclude image for this percentage of pixels above the Mask Threhold ADU</div>
+        <div class="col-sm-8">Exclude image for this percentage of pixels above the Mask Threshold ADU</div>
     </div>
 
     <div class="form-group row">
