--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -5,6 +5,14 @@
 {% block head %}
 <meta charset="UTF-8">
 <style>
+figure {
+  display: inline-block;
+  margin: 0;
+  float: left;
+}
+figure img {width: 100%;}
+.spacer {height: 5em;}
+
 .loader {
   display: block;
   border: 3px solid #f3f3f3;
@@ -21,16 +29,13 @@
 }
 </style>
 
-<link rel="stylesheet" href="{{ url_for('indi_allsky.static', filename='photoswipe/dist/photoswipe.css') }}">
 <script src="{{ url_for('indi_allsky.static', filename='photoswipe/dist/umd/photoswipe.umd.min.js') }}"></script>
 <script src="{{ url_for('indi_allsky.static', filename='photoswipe/dist/umd/photoswipe-lightbox.umd.min.js') }}"></script>
 
+<link rel="stylesheet" href="{{ url_for('indi_allsky.static', filename='photoswipe/dist/photoswipe.css') }}">
 <script type="text/javascript">
-var img;
-var fullscreen = false;  //initial state
-var image_data = [];
+var lightbox = null;
 </script>
-
 
 {% endblock %}
 
@@ -98,8 +103,16 @@ var image_data = [];
 
 <hr>
 
-<div class="row">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div id="allsky-gallery" class="pswp-gallery"></div>
+    </div>
+  </div>
 </div>
+
+<div class="spacer"></div>
+
 
 <script>
 const successMessage = $('#success-message');
@@ -139,6 +152,46 @@ fields['form_global'] = {
 };
 
 
+function populate_gallery(gallery_data) {
+    if (lightbox) {
+        lightbox.destroy();
+        lightbox = null;
+    }
+
+
+    $('#allsky-gallery').empty();
+
+    gallery_data.forEach(item => {
+        var a_div = $('<a />', {
+            'href'        : item['url'],
+            'data-pswp-width'  : item['width'],
+            'data-pswp-height' : item['height'],
+            'target'      : "_blank",
+            'rel'         : "noopener noreferrer",
+            'class'       : "text-decoration-none",
+        });
+        a_div.appendTo($('#allsky-gallery'));
+
+        var img_div = $('<img />', {
+            'src' : item['thumbnail_url'],
+            'alt' : "thumbnail",
+        });
+        img_div.appendTo(a_div);
+
+    });
+
+
+    lightbox = new PhotoSwipeLightbox({
+        gallery: '#allsky-gallery',
+        children: 'a',
+        // dynamic import is not supported in UMD version
+        pswpModule: PhotoSwipe
+    });
+
+    lightbox.init();
+}
+
+
 function hour_change(json_data) {
     $.ajax({
         type: "POST",
@@ -146,8 +199,6 @@ function hour_change(json_data) {
         contentType: "application/json",
         data: JSON.stringify(json_data),
         success: function(data){
-            image_data = data['IMAGE_DATA']
-
             gallery_data = [];
             data['IMAGE_DATA'].forEach(item => {
                 gallery_data.push({
@@ -158,6 +209,9 @@ function hour_change(json_data) {
                 });
             });
 
+            populate_gallery(data['IMAGE_DATA']);
+
+            $("#loader_filter").css({'display' : 'none'});
             $("#loader_filter").css({'display' : 'none'});
         },
         error: function(data){
@@ -199,8 +253,6 @@ function day_change(json_data) {
         contentType: "application/json",
         data: JSON.stringify(json_data),
         success: function(data){
-            image_data = data['IMAGE_DATA']
-
             $("#HOUR_SELECT").empty()
             data['HOUR_SELECT'].forEach(item => {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
@@ -215,6 +267,8 @@ function day_change(json_data) {
                     'alt' : item['date'],
                 });
             });
+
+            populate_gallery(data['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
@@ -256,8 +310,6 @@ function month_change(json_data) {
         contentType: "application/json",
         data: JSON.stringify(json_data),
         success: function(data){
-            image_data = data['IMAGE_DATA']
-
             $("#DAY_SELECT").empty()
             data['DAY_SELECT'].forEach(item => {
                 $("#DAY_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
@@ -277,6 +329,8 @@ function month_change(json_data) {
                     'alt' : item['date'],
                 });
             });
+
+            populate_gallery(data['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
@@ -317,8 +371,6 @@ function year_change(json_data) {
         contentType: "application/json",
         data: JSON.stringify(json_data),
         success: function(data){
-            image_data = data['IMAGE_DATA']
-
             $("#MONTH_SELECT").empty()
             data['MONTH_SELECT'].forEach(item => {
                 $("#MONTH_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
@@ -334,15 +386,7 @@ function year_change(json_data) {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-            gallery_data = [];
-            data['IMAGE_DATA'].forEach(item => {
-                gallery_data.push({
-                    'src' : item['url'],
-                    'width' : item['width'],
-                    'height' : item['height'],
-                    'alt' : item['date'],
-                });
-            });
+            populate_gallery(data['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
@@ -394,8 +438,6 @@ $("#FILTER_DETECTIONS").on("change", function() {
         contentType: "application/json",
         data: JSON.stringify(json_data),
         success: function(data){
-            image_data = data['IMAGE_DATA']
-
             $("#YEAR_SELECT").empty()
             data['YEAR_SELECT'].forEach(item => {
                 $("#YEAR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
@@ -416,22 +458,7 @@ $("#FILTER_DETECTIONS").on("change", function() {
                 $("#HOUR_SELECT").append($('<option />', {'value' : item[0]}).text(item[1]));
             });
 
-            gallery_data = [];
-            data['IMAGE_DATA'].forEach(item => {
-                gallery_data.push({
-                    'src' : item['url'],
-                    'width' : item['width'],
-                    'height' : item['height'],
-                    'alt' : item['date'],
-                });
-            });
-
-            var lightbox = new PhotoSwipeLightbox({
-                'dataSource' : gallery_data,
-                'showHideAnimationType' : 'none',
-                'pswpModule' : PhotoSwipe,
-            });
-            lightbox.init();
+            populate_gallery(data['IMAGE_DATA']);
 
             $("#loader_filter").css({'display' : 'none'});
         },
