new lens for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -10,13 +10,14 @@ canvas {
 }
 </style>
 <script>
-// lens image circle diameter
+// lens image circle diameter (mm)
 var icd = {
-    'zwo_f2.0_2.1mm' : 6.7,
-    'zwo_f1.2_2.5mm' : 6.7,
-    'arecont_f2.0_1.55mm' : 4.8,
-    'stardot_f1.5_1.55mm' : 4.8,
-    'm12_f2.0_1.7mm' : 5.6,
+    'zwo_f2.0_2.1mm'        :  6.7,
+    'zwo_f1.2_2.5mm'        :  6.7,
+    'arecont_f2.0_1.55mm'   :  4.8,
+    'stardot_f1.5_1.55mm'   :  4.8,
+    'm12_f2.0_1.7mm'        :  5.6,
+    'meike_f2.8_3.5mm'      : 12.5,
 }
 
 // sensor dimensions
