--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -887,10 +887,10 @@ $( document ).ready(function() {
             "right" : 39,
             "down"  : 40,
 
-            "w"     : 87,
-            "a"     : 65,
-            "s"     : 83,
-            "d"     : 68,
+            "w"     : 87,  // up
+            "a"     : 65,  // left
+            "s"     : 83,  // down
+            "d"     : 68,  // right
 
             "h"     : 72,  // right
             "j"     : 74,  // down
