--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -238,6 +238,49 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.IMAGE_QUEUE_MAX.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_QUEUE_MAX(class='form-control bg-secondary') }}
+            <div id="IMAGE_QUEUE_MAX-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Delay is added when maximum queue depth is hit</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_QUEUE_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_QUEUE_MIN(class='form-control bg-secondary') }}
+            <div id="IMAGE_QUEUE_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Delay is removed when minimum queue depth is hit</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_QUEUE_BACKOFF.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_QUEUE_BACKOFF(class='form-control bg-secondary') }}
+            <div id="IMAGE_QUEUE_BACKOFF-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Exposure delay added when maximum queue depth is hit</div>
+            <div>Algorithm: (QUEUE_SIZE / QUEUE_MAX) * EXPOSURE_PERIOD * BACKOFF</div>
+            <div><pre>Example: (4 (queue_size) / 3 (queue_max)) * 15 (period) * 0.5 (backoff) = 10.0s additional delay between exposures</pre></div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.CCD_BIT_DEPTH.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -3900,6 +3943,9 @@ const field_names = [
     'IMAGE_ALIGN_POINTS',
     'IMAGE_ALIGN_SOURCEMINAREA',
     'IMAGE_EXPIRE_DAYS',
+    'IMAGE_QUEUE_MAX',
+    'IMAGE_QUEUE_MIN',
+    'IMAGE_QUEUE_BACKOFF',
     'TIMELAPSE_EXPIRE_DAYS',
     'FFMPEG_FRAMERATE',
     'FFMPEG_BITRATE',
