highlight tiangong in astropanel

--- a/indi_allsky/flask/templates/astropanel.html
+++ b/indi_allsky/flask/templates/astropanel.html
@@ -286,6 +286,8 @@ function populateData() {
             tr_sat.css({'color' : "#00cccc"});
         } else if ( sat.name == 'HST' ) {
             tr_sat.css({'color' : "#00cccc"});
+        } else if ( sat.name == 'CSS (TIANHE)' ) {
+            tr_sat.css({'color' : "#00cccc"});
         } else if ( sat.alt > 25 ) {
             tr_sat.css({'color' : "#99cc00"});
         } else if ( sat.alt > 0 ) {
