add config note

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2575,7 +2575,10 @@
                 <div id="WEB_NONLOCAL_IMAGES-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Enable serving images/videos exclusively from non-local sources (S3, etc)</div>
+        <div class="col-sm-8">
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Changing these settings will require a restart</div>
+            <div class="col-sm-8">Enable serving images/videos exclusively from non-local sources (S3, etc)</div>
+        </div>
     </div>
 
     <div class="form-group row">
