more sensors for camera simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -208,6 +208,16 @@ var sd = {
         'h' : 1200,
         'p' : 3,
     },
+    'icx825al' : {
+        'w' : 1392,
+        'h' : 1040,
+        'p' : 6.45,
+    },
+    'icx205al' : {
+        'w' : 1392,
+        'h' : 1040,
+        'p' : 4.65,
+    },
 };
 </script>
 {% endblock %}
