--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <style>
 canvas {
-    width:90%;
+    width:75%;
 }
 </style>
 <script>
@@ -264,7 +264,9 @@ var sd = {
 </div>
 <div class="row">
     <div class="text-center">
+      <div class="col-sm-12">
         <canvas id="image-circle-canvas"></canvas>
+      </div>
     </div>
 </div>
 
@@ -308,6 +310,8 @@ function show_simulation() {
     var ratio  = Math.min ( hRatio, vRatio );
     //console.log('Ratio: ' + ratio);
 
+    canvas.width = r.w * ratio;
+    canvas.height = r.h * ratio;
 
     ctx.beginPath();
     ctx.fillStyle="#000000";
